# KnightVerse

./: CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SECURITY.md  docker-compose.yml  package-lock.json  tsconfig.json
.github/workflows/: backend.yml  soroban-deploy.yml
agent-engines/: README.md  anomaly_detector.test.ts  anomaly_detector.ts  anomaly_service.ts  gpu_worker.test.ts  gpu_worker.ts  index.ts  job_queue.test.ts  job_queue.ts  main.py  orchestrator_service.test.ts  orchestrator_service.ts  personality_service.test.ts  personality_service.ts  pyproject.toml  security_guard.test.ts  security_guard.ts  test_orchestrator.py
agent-engines/agent_engines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-engines/gpu_worker/: decentralized_orchestrator.py  deployment_pipeline.py  models.py  nl_intent_parser.py  nl_models.py  personality.py  pgn_converter.py  pgn_training_coordinator.py  png_converter.py  png_training_coordinator.py  resource_optimizer.py  stockfish_wasm.py  training_pipeline.py
agent-engines/monitoring/: ai_health.ts  dashboard_service.test.ts  dashboard_service.ts  metrics_collector.ts
agent-engines/tests/: test_anomaly_detection.py  test_decentralized_orchestrator.py  test_nl_agent.py  test_orchestration_enhancements.py  test_personality_pipeline.py  test_pgn_converter.py  test_pgn_training_coordinator.py  test_png_training_coordinator.py  test_stockfish_wasm.py
ai/: README.md  Security.md  VULNERABILITY_POLICY.md  __init__.py  nl_agent.py  pyproject.toml  resource_monitor.py  stockfish_wasm.py  worker.py
ai/tests/: test_ai.py
backend/: .env.example  AUTHENTICATION_SETUP.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SETUP_COMPLETE.md  VERIFY_IMPLEMENTATION.md  docker-compose.monitoring.yml
backend/modules/api/: API_DOCUMENTATION_GUIDE.md  Cargo.toml  README.md
backend/modules/api/src/: ai.rs  auth.rs  games.rs  lib.rs  metrics.rs  metrics_middleware.rs  metrics_tests.rs  openapi.rs  server.rs  ws.rs
backend/modules/api/src/test/: mod.rs
backend/modules/archiving/: Cargo.toml
backend/modules/archiving/src/: lib.rs
backend/modules/chess/: Cargo.toml
backend/modules/chess/src/: cheat_detection.rs  lib.rs  rating.rs
backend/modules/db/entity/tests/: game_smoke_test.rs
backend/modules/db/src/: lib.rs
backend/modules/integration_tests/: Cargo.toml
backend/modules/integration_tests/src/: main.rs
backend/modules/matchmaking/: elo.rs  models.rs  service.rs
backend/modules/metrics/: Cargo.toml
backend/modules/metrics/src/: lib.rs
backend/modules/pairing/: Cargo.toml
backend/modules/pairing/src/: lib.rs
backend/modules/security/src/: jwt.rs
backend/modules/service/src/: games.rs  players.rs
backend/modules/src/: main.rs
backend/modules/src/services/: game_services.rs
backend/modules/src/tests/: game_creation.rs
backend/modules/st_core/: README.md
backend/modules/st_core/src/: endpoint.rs  main.rs
backend/modules/st_core/tests/: integration_test.rs
backend/modules/tournament/src/: bracket.rs  lib.rs
backend/modules/tournament/src/swiss/: pairer.rs  tests.rs
backend/modules/validation/: Cargo.toml
backend/modules/validation/src/: lib.rs
backend/monitoring/: prometheus.yml
backend/monitoring/grafana/provisioning/dashboards/: dashboard.yml  xlmate-dashboard.json
backend/monitoring/grafana/provisioning/datasources/: prometheus.yml
backend/scripts/: verify-ci.sh
backend/src/: main.rs
backend/src/socket/: Cargo.toml  game.rs  lib.rs  pubsub.rs
contracts/: README.md  deploy_advanced.sh
contracts/game_contract/: .env.example  DEPLOYMENT.md  README.md  TODO.md  deploy.sh
frontend/: COMPONENT_ARCHITECTURE.md  ContributionGuideline.md  ENHANCEMENT_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  PREMIUM_UI_GUIDE.md  QUICK_START.md  UI_ENHANCEMENT_SUMMARY.md  package-lock.json  package.json
frontend/__tests__/: eloService.test.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/: AppearanceSettings.tsx  ChessVariantSelector.tsx  ClientRoot.tsx  EnhancedHeader.tsx  GameResultOverlay.tsx  GameSidebar.tsx  HeroBranding.tsx  (+4 more)
pers-store/: disconnectSlashing.ts  playerProfileMigration.ts  proofOfGame.ts  puzzleRewardVerifier.ts
(+65 files in other folders)
