[package]
name = "archiving"
version = "0.1.0"
edition = "2021"

[lib]
name = "archiving"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
db_entity = { path = "../db/entity" }
