[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration_tests"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# XLMate modules
metrics = { path = "../metrics" }
tournament = { path = "../tournament" }
validation = { path = "../validation" }
archiving = { path = "../archiving" }
api = { path = "../api" }

# Test dependencies
reqwest = { version = "0.11", features = ["json"] }
actix-rt = "2.9"
