[package]
name = "metrics"
version = "0.1.0"
edition = "2021"

[lib]
name = "metrics"
path = "src/lib.rs"

[dependencies]
prometheus = "0.13"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
