[package]
name = "socket"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "socket"
path = "main.rs"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"
redis = { version = "0.25", features = ["tokio-comp", "json"] }
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
